pod-security/restricted/restrict-seccomp-strict/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-seccomp-strict
status:
  ready: true
