pod-security/restricted/restrict-seccomp-strict/99-delete.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: restrict-seccomp-strict
